--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -1,6 +1,34 @@
 find_package( GSL COMPONENTS gsl gslcblas )
 find_package( Threads )
 
+
+##
+# Check for CXX11 or greater
+##
+include( CheckCXXCompilerFlag )
+check_cxx_compiler_flag( "-std=c++11" COMPILER_SUPPORTS_CXX11 )
+if( COMPILER_SUPPORTS_CXX11 )
+ set( CMAKE_CXX_STANDARD 11 )
+else()
+ message( FATAL_ERROR "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a newer compiler" )
+endif()
+
+##
+# Check for c99 or greater
+##
+include( CheckCCompilerFlag )
+check_c_compiler_flag( "-std=c99" COMPILER_SUPPORTS_C99 )
+if( COMPILER_SUPPORTS_C99 )
+ set( CMAKE_C_STANDARD 99 )
+else()
+ message( FATAL_ERROR "The compiler ${CMAKE_C_COMPILER} has no c99 support. Please use a newer compiler" )
+endif()
+
+
+set( CXX_STANDARD ON )
+set( C_STANDARD ON )
+
+
 set( TESTAPPS allocate portTypeException dynallocate stdlibsupport split 
      join lambdatest allocate_s foreach peekrange gamma uniform 
      gaussian exponential partitionTest iteratort sequential 
