--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,10 +18,10 @@ set( BOOST_MODULES config core )
 foreach( BMODULE ${BOOST_MODULES} )
  message( INFO " Initializing sub-module boost-${BMODULE} from git repo..." )
  message( INFO " at location ${BOOSTDIR}/${BMODULE}" )
- execute_process( COMMAND git-submodule init 
-                  WORKING_DIRECTORY ${BOOSTDIR}/${BMODULE} )
- execute_process( COMMAND git submodule update 
-                  WORKING_DIRECTORY ${BOOSTDIR}/${BMODULE} )
+ execute_process( COMMAND git submodule init ${BOOSTDIR}/${BMODULE}
+                  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} )
+ execute_process( COMMAND git submodule update ${BOOSTDIR}/${BMODULE} 
+                  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} )
  include_directories( ${BOOSTDIR}/${BMODULE}/include )
 endforeach( BMODULE ${BOOST_MODULES} )
 endif( Boost_FOUND )
