--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ include_directories ( ${CMAKE_SOURCE_DIR} )
 
 add_subdirectory( src )
 add_subdirectory( raftinc )
+add_subdirectory( ${CMAKE_SOURCE_DIR}/examples/cppalgo/search )
+add_subdirectory( ${CMAKE_SOURCE_DIR}/examples/opencv )
 
 ##
 # we need boost to demangle names, might use
@@ -29,7 +31,8 @@ add_subdirectory( testsuite )
 enable_testing()
 set( TESTAPPS allocate portTypeException dynallocate stdlibsupport split 
      join lambdatest allocate_s foreach peekrange 
-     partitionTest iteratort parallel peek )
+     partitionTest iteratort parallel peek
+     operatorBracketsTooMany )
 if( BUILDRANDOM )
     list( APPEND TESTAPPS gamma uniform gaussian exponential sequential ) 
 endif( BUILDRANDOM )
