--- a/.travis.yml
+++ b/.travis.yml
@@ -49,8 +49,7 @@ addons:
       - wget
       - xz-utils
       - libtool
-      - libopencv-dev
-
+      - zip
 
 before_script:
     - wget --no-check-certificate  https://cmake.org/files/v3.4/cmake-3.4.0-Linux-x86_64.tar.gz
@@ -59,6 +58,9 @@ before_script:
     - wget --no-check-certificate http://llvm.org/releases/3.7.0/clang+llvm-3.7.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz;
     - tar -xf clang+llvm-3.7.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz
     - export PATH=$PWD/clang+llvm-3.7.0-x86_64-linux-gnu-ubuntu-14.04/bin:$PATH
+    - wget --no-check-certificate https://github.com/Itseez/opencv/archive/3.1.0.zip
+    - unzip 3.1.0.zip
+    - mkdir opencv && cd opencv && cmake ../opencv-3.1.0 && make -j
     - echo $LANG
     - echo $LC_ALL
     - mkdir build
