--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -15,7 +15,7 @@ find_package( LIBRT )
 set( TESTAPPS allocate portTypeException dynallocate stdlibsupport split 
      join lambdatest allocate_s foreach peekrange  
      partitionTest parallel peek 
-     bracketsTest )
+     bracketsTest uniform )
 
 if( BUILDRANDOM )
 list( APPEND TESTAPP gamma uniform gaussian exponential sequential ) 
