--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ add_subdirectory( src )
 add_subdirectory( raftinc )
 add_subdirectory( ${CMAKE_SOURCE_DIR}/examples/cppalgo/search )
 add_subdirectory( ${CMAKE_SOURCE_DIR}/examples/general/pi )
+add_subdirectory( ${CMAKE_SOURCE_DIR}/examples/general/pbzip_raft )
 
 ##
 # we need boost to demangle names, might use
@@ -54,3 +55,4 @@ set( MAINHEADERS
 foreach( HFILE ${MAINHEADERS} )
  install( FILES ${CMAKE_SOURCE_DIR}/${HFILE}  DESTINATION ${CMAKE_INSTALL_PREFIX}/include )
 endforeach( HFILE ${MAINHEADERS} )
+
