implemented a few of the unimplemented chaining operators for static chaining, a few more updates and that feature will be complete. added additional test cases

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,9 @@ enable_testing()
 set( TESTAPPS allocate portTypeException dynallocate stdlibsupport split 
      join lambdatest allocate_s foreach peekrange 
      partitionTest parallel peek
-     bracketsTest uniform )
+     bracketsTest uniform splitchain
+     staticLongSplitChain staticSplitJoin 
+     staticSplitChainJoin staticJoin staticContJoin )
 if( BUILDRANDOM )
     list( APPEND TESTAPPS gamma uniform gaussian exponential sequential ) 
 endif( BUILDRANDOM )
