--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -15,7 +15,10 @@ find_package( LIBRT )
 set( TESTAPPS allocate portTypeException dynallocate stdlibsupport split 
      join lambdatest allocate_s foreach peekrange  
      partitionTest parallel peek 
-     bracketsTest uniform )
+     bracketsTest uniform chain 
+     splitchain staticLongSplitChain 
+     staticSplitJoin staticSplitChainJoin 
+     staticJoin staticContJoin )
 
 if( BUILDRANDOM )
 list( APPEND TESTAPP gamma uniform gaussian exponential sequential ) 
