gradual change, integrating last few additions for the new syntax, need to add static split/join inside OoO syntax

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,7 +79,9 @@ set( TESTAPPS allocate portTypeException dynallocate stdlibsupport split
      allocatePopPush 
      allocatePopInternal
      allocatePopInternalObject
-     allocatePopExternal )
+     allocatePopExternal
+     prefetchEffective 
+     parallelchain )
 if( BUILDRANDOM )
     list( APPEND TESTAPPS gamma uniform gaussian exponential sequential ) 
 endif( BUILDRANDOM )
