--- a/examples/opencv/CMakeLists.txt
+++ b/examples/opencv/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package( OpenCV 2 REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 
 find_package( LIBRT )
+find_package( Scotch )
 
 set( APP contours )
 
@@ -22,5 +23,6 @@ add_executable( ${APP} "${APP}.cpp" )
 target_link_libraries( ${APP} 
                        raft  
                        ${CMAKE_THREAD_LIBS_INIT} 
+                       ${CMAKE_SCOTCH_LIBS}
                        ${CMAKE_RT_LIBS} 
                        ${OpenCV_LIBS} )
