--- a/examples/general/rbzip2/CMakeLists.txt
+++ b/examples/general/rbzip2/CMakeLists.txt
@@ -2,6 +2,10 @@ list( APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake )
 
 find_package( Threads )
 ##
+# check for Scotch, use if there
+##
+find_package( Scotch )
+##
 # c/c++ std
 ##
 include( CheckSTD )
@@ -34,11 +38,13 @@ endif( EXISTS ${GITDEP} )
 set( APP rbzip2 )
 
 add_executable( ${APP} "${APP}.cpp" )
+include_directories( ${CMAKE_SCOTCH_INCS} )
 
 target_link_libraries( ${APP} 
                        raft
                        cmdargs
                        bz2
+                       ${CMAKE_SCOTCH_LIBS}
                        ${CMAKE_THREAD_LIBS_INIT} 
                        ${CMAKE_RT_LIBS} )
 
