some more updates, added kset template, need to update kpair to add syntax for inlining

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,7 +88,8 @@ set( TESTAPPS allocate portTypeException dynallocate stdlibsupport split
      allocatePopInternalObject
      allocatePopExternal
      prefetchEffective 
-     parallelchain )
+     parallelchain 
+     ksettest )
 if( BUILDRANDOM )
     list( APPEND TESTAPPS gamma uniform gaussian exponential sequential ) 
 endif( BUILDRANDOM )
