--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -39,7 +39,8 @@ set( TESTAPPS allocate portTypeException dynallocate stdlibsupport split
      allocatePopInternalObject
      allocatePopExternal 
      prefetchEffective 
-     parallelchain )
+     parallelchain 
+     ksettest )
 
 if( BUILDRANDOM )
 list( APPEND TESTAPP gamma uniform gaussian exponential sequential ) 
