--- a/examples/cppalgo/search/CMakeLists.txt
+++ b/examples/cppalgo/search/CMakeLists.txt
@@ -16,16 +16,19 @@ include( CheckBoostDep )
 
 find_package( LIBRT )
 
+
 set( APP bmh )
 
 add_executable( ${APP} "${APP}.cpp" )
 
 include_directories( ${CMAKE_SCOTCH_INCS} )
+
 target_link_libraries( ${APP} 
-                       raft  
+                       raft                       
                        ${CMAKE_THREAD_LIBS_INIT} 
                        ${CMAKE_SCOTCH_LIBS}
-                       ${CMAKE_RT_LIBS} )
+                       ${CMAKE_RT_LIBS}
+                       )
 
 file( COPY alice.txt
       DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
