--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,8 +23,7 @@ add_library( raft
              ${C_SRC_FILES}   )
 
 target_link_libraries( raft 
-                       ${CMAKE_SCOTCH_LIBS}
-                       m )
+                       ${CMAKE_SCOTCH_LIBS} )
 
 
 # Enable warnings if using clang or gcc.
