yet more updates on the quest for a good windows compile :)

--- a/examples/general/CMakeLists.txt
+++ b/examples/general/CMakeLists.txt
@@ -2,7 +2,13 @@
 #pi             readfile       sum
 
 add_subdirectory( pi )
+##
+# take out if windows since not that many have bzlib installed
+##
+if( NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows" )
 add_subdirectory( rbzip2 )
+endif( NOT ${CMAKE_SYSTEM_NAME} MATCHES "Windows" )
+
 add_subdirectory( multiply )
 add_subdirectory( readfile )
 add_subdirectory( singlequeue )
