pulled updates from master into dev, mainly for shm, going to hack in the dev branch a bit on kset and vmspace

--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -36,7 +36,8 @@ set( TESTAPPS allocate portTypeException dynallocate stdlibsupport split
      allocatePopExternal 
      prefetchEffective 
      parallelchain 
-     ksettest )
+     ksettest
+     splitKsetJoin )
 
 if( BUILDRANDOM )
 list( APPEND TESTAPP gamma uniform gaussian exponential sequential ) 
