added impl to search kernel, fixed a few bugs, added test case for search, need to do so for rest of kernels

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,7 +89,8 @@ set( TESTAPPS allocate portTypeException dynallocate stdlibsupport split
      allocatePopExternal
      prefetchEffective 
      parallelchain 
-     ksettest )
+     ksettest 
+     fixedMatchTest )
 if( BUILDRANDOM )
     list( APPEND TESTAPPS gamma uniform gaussian exponential sequential ) 
 endif( BUILDRANDOM )
