updates to in-progress dev branch

--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -36,11 +36,12 @@ set( TESTAPPS allocate portTypeException dynallocate stdlibsupport split
      allocatePopExternal 
      prefetchEffective 
      parallelchain 
-     ksettest
      splitKsetCont
      ksetContContJoin
      KsetJoin
-     splitKsetJoin )
+     splitKsetJoin
+     ksettest 
+     fixedMatchTest )
 
 if( BUILDRANDOM )
 list( APPEND TESTAPP gamma uniform gaussian exponential sequential ) 
@@ -54,3 +55,6 @@ foreach( APP ${TESTAPPS} )
                                      ${CMAKE_SCOTCH_LIBS}
                                      ${CMAKE_RT_LIBS} )
 endforeach( APP ${TESTAPPS} )
+
+file( COPY alice.txt
+      DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
