updates, initial commit to qthreads

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "git-dep/shm"]
 	path = git-dep/shm
 	url = https://github.com/RaftLib/shm.git
+[submodule "git-dep/qthreads"]
+	path = git-dep/qthreads
+	url = https://github.com/RaftLib/qthreads.git
