--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,10 @@ list( APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake )
 # check for Scotch, use if there
 ##
 find_package( Scotch )
-
 option( USESCOTCH "Use Scotch partitioning library" )
+
+find_package( QThreads )
+option( USEQTHREAD "Use QThread threading library" )
 
 ##
 # c std
@@ -57,10 +59,10 @@ if( BUILD_WOPENCV )
     add_subdirectory( examples/opencv )
 endif( BUILD_WOPENCV )
 
-mark_as_advanced( BUILD_WQTHREADS false )
-if( BUILD_WQTHREADS )
+mark_as_advanced( USEQTHREAD false )
+if( USEQTHREAD )
     add_definitions( "-DUSEQTHREADS=1" )
-endif( BUILD_WQTHREADS )
+endif( USEQTHREAD )
 
 ##
 # we need boost to demangle names, might use
