--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -1,2 +1,3 @@
-##Benchmark Prefetching for Object Types
-add_subdirectory( prefetch )
+#add_subdirectory( boost )
+#add_subdirectory( cppalgo )
+add_subdirectory( histogram )
