--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -1,3 +1,5 @@
 #add_subdirectory( boost )
 #add_subdirectory( cppalgo )
+if( ${CMAKE_SYSTEM_NAME} STREQUAL "Linux" )
 add_subdirectory( histogram )
+endif( ${CMAKE_SYSTEM_NAME} STREQUAL "Linux" )
